Moved beeping into mbeep and require mtypes for compatibility.

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "lib/mbeep"]
 	path = lib/mbeep
 	url = https://github.com/indigoparadox/mbeep
+[submodule "lib/maug"]
+	path = lib/maug
+	url = https://github.com/indigoparadox/maug
